esqueleto de web

--- a/index.html
+++ b/index.html
@@ -1,19 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
     <title>TP Monitor</title>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet"> 
-</head>
-<body>
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="titulo">
+        <header><h1>El monitor y su funcionamiento</h1></header>
+    </div>
 
+    <div class="indice">
+      <ol>
+        <h2 class="indice__titulo">INDICE</h2>
+        <li class="indice__elemento">
+          <a href="#alpaca1">elemento 1</a>
+        </li>
+        <li class="indice__elemento">
+          <a href="#alpaca2">elemento 2</a>
+        </li>
+      </ol>
+    </div>
 
-
+    <div class="texto">
+      <h3>titulo</h3>
+      <p class="texto__parrafo" id="alpaca1">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+        voluptatibus iste excepturi expedita ex repudiandae eius ipsam in
+        consequatur rerum! Quisquam temporibus in neque nulla quasi ipsum
+        explicabo non iusto!Loremlor Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Suscipit porro ex incidunt recusandae. Nemo, voluptate
+        incidunt aperiam aliquid ipsam aut quos itaque odio vero saepe quia at
+        distinctio porro possimus.
+      </p>
+      <p class="texto__parrafo" id="alpaca2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+        voluptatibus iste excepturi expedita ex repudiandae eius ipsam in
+        consequatur rerum! Quisquam temporibus in neque nulla quasi ipsum
+        explicabo non iusto! Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Doloremque dolorem est perspiciatis fugiat assumenda quo, nulla
+        quaerat hic repellendus nisi dolore, sit laboriosam corporis officiis
+        cum reiciendis quas dolorum suscipit.
+      </p>
+    </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
