--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="titulo">
-        <header><h1>El monitor y su funcionamiento</h1></header>
+      <header><h1>El monitor y su funcionamiento</h1></header>
     </div>
 
     <div class="indice">
@@ -28,25 +28,30 @@
     </div>
 
     <div class="texto">
-      <h3>titulo</h3>
-      <p class="texto__parrafo" id="alpaca1">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-        voluptatibus iste excepturi expedita ex repudiandae eius ipsam in
-        consequatur rerum! Quisquam temporibus in neque nulla quasi ipsum
-        explicabo non iusto!Loremlor Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Suscipit porro ex incidunt recusandae. Nemo, voluptate
-        incidunt aperiam aliquid ipsam aut quos itaque odio vero saepe quia at
-        distinctio porro possimus.
-      </p>
-      <p class="texto__parrafo" id="alpaca2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
-        voluptatibus iste excepturi expedita ex repudiandae eius ipsam in
-        consequatur rerum! Quisquam temporibus in neque nulla quasi ipsum
-        explicabo non iusto! Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Doloremque dolorem est perspiciatis fugiat assumenda quo, nulla
-        quaerat hic repellendus nisi dolore, sit laboriosam corporis officiis
-        cum reiciendis quas dolorum suscipit.
-      </p>
+      <div class="texto__contenedor">
+        <h3>titulo</h3>
+        <p class="texto__parrafo" id="alpaca1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+          voluptatibus iste excepturi expedita ex repudiandae eius ipsam in
+          consequatur rerum! Quisquam temporibus in neque nulla quasi ipsum
+          explicabo non iusto!Loremlor Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Suscipit porro ex incidunt recusandae. Nemo,
+          voluptate incidunt aperiam aliquid ipsam aut quos itaque odio vero
+          saepe quia at distinctio porro possimus.
+        </p>
+      </div>
+      <div class="texto__contenedor">
+        <h3>titulo</h3>
+        <p class="texto__parrafo" id="alpaca2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+          voluptatibus iste excepturi expedita ex repudiandae eius ipsam in
+          consequatur rerum! Quisquam temporibus in neque nulla quasi ipsum
+          explicabo non iusto!Loremlor Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Suscipit porro ex incidunt recusandae. Nemo,
+          voluptate incidunt aperiam aliquid ipsam aut quos itaque odio vero
+          saepe quia at distinctio porro possimus.
+        </p>
+      </div>
     </div>
 
     <script src="script.js"></script>
